// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component - Functional Tests matches snapshot for checked state 1`] = `
<button
  aria-checked="true"
  class="border-GRAY_500 hover:bg-GRAY_400 focus-visible:ring-ring data-[state=checked]:bg-GRAY_1000 data-[state=checked]:border-GRAY_600 peer h-3.5 w-3.5 shrink-0 cursor-pointer rounded-[3px] border focus-visible:ring-1 focus-visible:outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
  data-slot="checkbox"
  data-state="checked"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="flex items-center justify-center text-current"
    data-state="checked"
    style="pointer-events: none;"
  >
    <svg
      class="lucide lucide-check text-GRAY_1000 h-[10px] w-[10px]"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`Checkbox Component - Functional Tests matches snapshot for default checkbox 1`] = `
<button
  aria-checked="false"
  class="border-GRAY_500 hover:bg-GRAY_400 focus-visible:ring-ring data-[state=checked]:bg-GRAY_1000 data-[state=checked]:border-GRAY_600 peer h-3.5 w-3.5 shrink-0 cursor-pointer rounded-[3px] border focus-visible:ring-1 focus-visible:outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
  data-slot="checkbox"
  data-state="unchecked"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox Component - Functional Tests matches snapshot for disabled state 1`] = `
<button
  aria-checked="false"
  class="border-GRAY_500 hover:bg-GRAY_400 focus-visible:ring-ring data-[state=checked]:bg-GRAY_1000 data-[state=checked]:border-GRAY_600 peer h-3.5 w-3.5 shrink-0 cursor-pointer rounded-[3px] border focus-visible:ring-1 focus-visible:outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
  data-disabled=""
  data-slot="checkbox"
  data-state="unchecked"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Checkbox Component - Functional Tests matches snapshot for indeterminate state 1`] = `
<button
  aria-checked="mixed"
  class="border-GRAY_500 hover:bg-GRAY_400 focus-visible:ring-ring data-[state=checked]:bg-GRAY_1000 data-[state=checked]:border-GRAY_600 peer h-3.5 w-3.5 shrink-0 cursor-pointer rounded-[3px] border focus-visible:ring-1 focus-visible:outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
  data-slot="checkbox"
  data-state="indeterminate"
  role="checkbox"
  type="button"
  value="on"
>
  <span
    class="flex items-center justify-center text-current"
    data-state="indeterminate"
    style="pointer-events: none;"
  >
    <svg
      class="lucide lucide-check text-GRAY_1000 h-[10px] w-[10px]"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
  </span>
</button>
`;
